# ur5-rl

./: .gitignore  Dockerfile  README.md  README.txt  buffer.py  camera_calib.py  dist_exp.py  dq.py  dq_cosas.py  loop_test.py  main.py  main.txt  my_parser.py  networks.py  networks_SB.py  or_exp.py  parser.py  plot_logs.py  plots.py  pruebas.py  setup.py  sim.py  success_bars.py  test.py  test_aux.py  test_results.json  test_results_withError.json  train.py  trainer.py  ur5.py
7.0/Whole_7.0/: events.out.tfevents.1710430567.slave-robot.19467.0
DQ_5.0_aux/Orientation_DQ5.0_aux/: events.out.tfevents.1709060016.slave-robot.26734.0
DQ_6.0/Orientation_DQ6.0/: events.out.tfevents.1709903680.slave-robot.40820.0
config/: agent_config.yml  config.yml  model_config.yml  sim_config.yml
logs/Test_1.0/: Test_1.0_actor_rew.csv  Test_1.0_actor_rew.json  Test_1.0_epLen.csv  Test_1.0_epLen.json  events.out.tfevents.1706087372.slave-robot.16050.0
logs/Test_1.1/: Test_1.1_epLen.csv  Test_1.1_epLen.json  Test_1.1_rew.csv  Test_1.1_rew.json  events.out.tfevents.1706098743.slave-robot.20709.0
logs/Test_1.2/: Test_1.2_actor_rew.csv  Test_1.2_actor_rew.json  Test_1.2_epLen.csv  Test_1.2_epLen.json  events.out.tfevents.1706104855.slave-robot.22730.0
logs/Test_16/: events.out.tfevents.1706115117.slave-robot.28584.0
logs/pingo/: events.out.tfevents.1706352067.106da9fce1e2.2614.0
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros_ws/: setup.py
ros_ws/devel/: .catkin  _setup_util.py  setup.sh
ros_ws/devel/include/canbus_interface/: CanFrame.h  CanFrameSrv.h  CanFrameSrvRequest.h  CanFrameSrvResponse.h
ros_ws/devel/include/experiment_settings/: Grasp.h  GraspEvoContacts.h  GraspEvoPose.h  IKAction.h  IKActionFeedback.h  IKActionGoal.h  IKActionResult.h  IKFeedback.h  IKGoal.h  IKResult.h  Object.h
ros_ws/src/canbus_interface/: CMakeLists.txt  leeme.txt  package.xml
ros_ws/src/test_inertias/: CMakeLists.txt  package.xml
ros_ws/src/ur5_rl/: CMakeLists.txt  package.xml
ros_ws/src/urdfs_test/: CMakeLists.txt
ros_ws/ur5_rl/: __init__.py
ros_ws/ur5_rl/envs/: ur5_rl.py
ros_ws/ur5_rl/resources/: object.py  table.py  utils.py
ur5_rl.egg-info/: PKG-INFO  SOURCES.txt
ur5_rl/envs/: __init__.py  ur5_rl.py
ur5_rl/resources/: object.py  plane.py  table.py  ur5.py  utils.py
(+393 files in other folders)
